--- a/package.json
+++ b/package.json
@@ -5,8 +5,20 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@nx/esbuild": "16.8.1",
+    "@nx/eslint-plugin": "16.8.1",
     "@nx/js": "^16.8.1",
+    "@nx/linter": "16.8.1",
     "@nx/workspace": "16.8.1",
-    "nx": "16.8.1"
-  }
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "esbuild": "^0.17.17",
+    "eslint": "~8.46.0",
+    "eslint-config-prettier": "8.1.0",
+    "nx": "16.8.1",
+    "prettier": "^2.6.2",
+    "typescript": "~5.1.3"
+  },
+  "dependencies": {}
 }
