--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@nx-esbuild-pollutes-package-json/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "npx nx run-many --target=build,lint --fix"
+  },
   "private": true,
   "devDependencies": {
     "@nx/esbuild": "16.8.1",
